Fix logo focus outline color in dark mode

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -484,8 +484,6 @@ header {
     .logo {
         @include font-size(40);
         @include sans-serif;
-        // Small screens less than 500px use the dj logo. This gives more
-        // horizontal space for a searchbar in the header.
         background: url(../img/logo-dj.svg) center center no-repeat;
         color: var(--white-color);
         display: block;
@@ -505,6 +503,12 @@ header {
         @include respond-min(1080px) {
             margin-left: 10px;
         }
+
+        &:focus {
+            outline: 2px solid var(--white-color) !important;
+            outline-offset: 2px;
+        }
+
     }
 
     .header-tools {
